[package]
name = "assign"
version = "1.0.0"
edition = "2018"
description = "Simple macro to allow mutating instance with declarative flavor"
authors = ["Alan Darmasaputra <alan@accelbyte.net>"]
repository = "https://github.com/Kelerchian/assign"
readme = "README.md"
license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
