[package]
name = "assign"
version = "1.1.1"
edition = "2018"
description = "Simple macro to allow mutating instance with declarative flavor"
categories = ["no-std"]
keywords = ["macro"]
authors = [
    "Alan Darmasaputra <kelerchian@gmail.com>",
    "Jonas Platte <jplatte@posteo.de>",
]
repository = "https://github.com/Kelerchian/assign"
readme = "README.md"
license = "MIT"
